sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:15: error: type mismatch;
 found   : Unit
 required: Boolean
    if(nbEchanges=0) {
                 ^